<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentPalette"
    android:orientation="vertical">

    <TextView
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/orangePalette" />

    <EditText
        style="@style/edit_text"
        android:id="@+id/editTextId"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:hint="@string/id"
        android:autofillHints="@string/id"
        android:inputType="number" />

    <EditText
        style="@style/edit_text"
        android:id="@+id/editTextPass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <android.widget.Button
        android:id="@+id/sendSignIn"
        style="@style/button_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/log"
        android:textAllCaps="false" />

</LinearLayout>
